--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <input type="email" placeholder="Email" class="input" id="sup-mail" />
                 <input type="password" placeholder="Password" class="input" id="passup" />
                 <button class="btn" id="bttn-2">Sign Up</button>
-                <h3 class="form__title" style="padding-top: 20px;">Or login with</h3>
+                <h3 class="form__title" style="padding-top: 20px;">Or signUp with</h3>
                 <div class="d-flex">
                     <a href="#"><div class="p-2"><img src="./google.png" width="auto" height="50px"></div></a>
                     <a href="#"><div class="p-2"><img src="./micro.jpg" width="auto" height="50px"></div></a>
